nobodywho/grammar/gbnf/tests/snapshots/test_gbnf__grouping.snap
---
source: gbnf/tests/test_gbnf.rs
expression: grammar
---
GbnfGrammar {
    declarations: [
        GbnfDeclaration {
            name: "foo",
            expr: Characters(
                "foo",
            ),
        },
        GbnfDeclaration {
            name: "bar",
            expr: Characters(
                "bar",
            ),
        },
        GbnfDeclaration {
            name: "baz",
            expr: Characters(
                "baz",
            ),
        },
        GbnfDeclaration {
            name: "root",
            expr: Sequence(
                [
                    Group(
                        Alternation(
                            [
                                NonTerminal(
                                    "foo",
                                ),
                                NonTerminal(
                                    "bar",
                                ),
                            ],
                        ),
                    ),
                    NonTerminal(
                        "baz",
                    ),
                ],
            ),
        },
    ],
    gbnf_string: "foo ::= \"foo\"\nbar ::= \"bar\"\nbaz ::= \"baz\"\nroot ::= (foo | bar) baz",
    root_name: "root",
}
