nobodywho/grammar/gbnf/tests/snapshots/test_gbnf__sequence.snap
---
source: gbnf/tests/test_gbnf.rs
expression: grammar
---
GbnfGrammar {
    declarations: [
        GbnfDeclaration {
            name: "rule",
            expr: Sequence(
                [
                    Characters(
                        "hello",
                    ),
                    Characters(
                        " ",
                    ),
                    Characters(
                        "world",
                    ),
                ],
            ),
        },
    ],
    gbnf_string: "rule ::= \"hello\" \" \" \"world\"",
    root_name: "rule",
}
